# Shelf-Life-Copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: tdd.md
.claude/rules/: engineering.mdc
.github/workflows/: ci.yaml
data/batches/: customerA.json  customerB.json
data/config/: customerA.actions.json  customerB.actions.json
data/mock_history/: customerA.json  customerB.json
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  FALLBACK_VIDEO.md  MARKETING.md  PRD.md  QUICKSTART.md  RUNBOOK_DEMO.md  TECH_SPEC.md  TODO.md
docs/blog/: 2026-06-04-150wan-loss-decoded.md  README.md
docs/demo_samples/: customerA.md  customerB.md  llm_validation_report.json  llm_validation_report_pre_oos_fix.json
plugins/: README.md
src/: cli.py  main.py
src/alerts/: __init__.py  monitor.py
src/models/: __init__.py  action.py  alert.py  batch.py  card.py  customer.py  decision.py  suggestion.py  thresholds.py
src/persistence/: __init__.py  decision_store.py  suggestion_store.py
src/plugins/: __init__.py  loader.py  registry.py
src/reports/: __init__.py  aggregator.py  renderer.py  runner.py  sources.py
src/repository/: __init__.py  loader.py  protocol.py
src/runtime/: __init__.py  config.py  lifespan.py
src/sales/: __init__.py  models.py  pdf.py  qualifier.py  report.py
src/scheduler/: __init__.py  monthly.py  runner.py  scheduler.py
src/suggestion/: __init__.py  engine.py  prompt.py  providers.py  schema.py
src/webhook/: __init__.py  crypto.py  handlers.py  router.py  schemas.py
src/wecom/: __init__.py  cards.py  client.py
tests/: conftest.py  test_check_no_internal_leak.py  test_cli.py  test_health.py
tests/alerts/: test_monitor.py
tests/models/: test_action.py  test_batch.py  test_card.py  test_customer.py  test_decision.py  test_suggestion.py
tests/persistence/: test_decision_store.py  test_suggestion_store.py
tests/plugins/: test_loader.py
tests/reports/: test_aggregator.py  test_renderer.py  test_runner.py  test_sources.py
tests/repository/: test_loader.py  (+1 more)
tools/: check_no_internal_leak.py  qualify_lead.py  render_demo_cards.py  render_monthly_report.py  trigger_monthly_now.py  validate_llm.py
(+26 files in other folders)
